fixed some errors with the way the model was set -> offset parameters in the objective properly to account for inefficient naming conventions

--- a/project_playground.ipynb
+++ b/project_playground.ipynb
@@ -125,33 +125,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range(1, 11)\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "(0, 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 23\u001b[0m\n\u001b[0;32m     18\u001b[0m u_vars  \u001b[38;5;241m=\u001b[39m{(i):opt_model\u001b[38;5;241m.\u001b[39maddVar(vtype\u001b[38;5;241m=\u001b[39mgrb\u001b[38;5;241m.\u001b[39mGRB\u001b[38;5;241m.\u001b[39mINTEGER,\n\u001b[0;32m     19\u001b[0m             name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx_\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(i)) \n\u001b[0;32m     20\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m n}\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m## The constraints - naming conventions follow Bektas, 2006:\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(\u001b[43mgrb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquicksum\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_vars\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_cities\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m n_salesmen, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_1_1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     24\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum((x_vars[j,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities))) \u001b[38;5;241m==\u001b[39m n_salesmen, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     25\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum((x_vars[i,j]\u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m set_I\n\u001b[0;32m     26\u001b[0m                             \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities))) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32msrc\\\\gurobipy\\\\gurobi.pxi:3842\u001b[0m, in \u001b[0;36mgurobipy.quicksum\u001b[1;34m()\u001b[0m\n",
-      "Cell \u001b[1;32mIn[5], line 23\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     18\u001b[0m u_vars  \u001b[38;5;241m=\u001b[39m{(i):opt_model\u001b[38;5;241m.\u001b[39maddVar(vtype\u001b[38;5;241m=\u001b[39mgrb\u001b[38;5;241m.\u001b[39mGRB\u001b[38;5;241m.\u001b[39mINTEGER,\n\u001b[0;32m     19\u001b[0m             name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx_\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(i)) \n\u001b[0;32m     20\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m n}\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m## The constraints - naming conventions follow Bektas, 2006:\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum((\u001b[43mx_vars\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities))) \u001b[38;5;241m==\u001b[39m n_salesmen, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_1_1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     24\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum((x_vars[j,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities))) \u001b[38;5;241m==\u001b[39m n_salesmen, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     25\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum((x_vars[i,j]\u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m set_I\n\u001b[0;32m     26\u001b[0m                             \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities))) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconst_3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: (0, 1)"
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 10.0 (19045.2))\n",
+      "\n",
+      "CPU model: 12th Gen Intel(R) Core(TM) i7-12700K, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 12 physical cores, 20 logical processors, using up to 20 threads\n",
+      "\n",
+      "Optimize a model with 104 rows, 110 columns and 462 nonzeros\n",
+      "Model fingerprint: 0x586044eb\n",
+      "Variable types: 0 continuous, 110 integer (100 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+01]\n",
+      "  Objective range  [3e-02, 2e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+01]\n",
+      "Presolve removed 9 rows and 9 columns\n",
+      "Presolve time: 0.00s\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 20 available processors)\n",
+      "\n",
+      "Solution count 0\n",
+      "\n",
+      "Model is infeasible\n",
+      "Best objective -, best bound -, gap -\n"
      ]
     }
    ],
    "source": [
-    "n = range(0, n_cities)\n",
-    "m = range(0, n_cities)\n",
+    "n = range(1, n_cities + 1)\n",
+    "m = range(1, n_cities + 1)\n",
     "\n",
     "set_I = n\n",
     "set_J = m\n",
@@ -170,8 +179,8 @@
     "            for i in n}\n",
     "\n",
     "## The constraints - naming conventions follow Bektas, 2006:\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[0,j] for j in range(1, n_cities))) == n_salesmen, name='const_1_1')\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[j,0] for j in range(1, n_cities))) == n_salesmen, name='const_2')\n",
+    "opt_model.addConstr(grb.quicksum((x_vars[1,j] for j in range(1, n_cities + 1))) == n_salesmen, name='const_1_1')\n",
+    "opt_model.addConstr(grb.quicksum((x_vars[j,1] for j in range(1, n_cities + 1))) == n_salesmen, name='const_2')\n",
     "opt_model.addConstr(grb.quicksum((x_vars[i,j]for i in set_I\n",
     "                            for j in range(1, n_cities))) == 1, name='const_3')\n",
     "opt_model.addConstr(grb.quicksum((x_vars[i,j]for j in set_J\n",
@@ -183,13 +192,13 @@
     "opt_model.addConstr((u_vars[1] == 0), name='uconst_3')\n",
     "\n",
     "## The main SEC constraint:\n",
-    "for i in range(0, n_cities):\n",
-    "    for j in range(0, n_cities):\n",
+    "for i in range(1, n_cities + 1):\n",
+    "    for j in range(1, n_cities + 1):\n",
     "        if i != j and 1 <= i and i <= n_cities - 1:\n",
     "            opt_model.addConstr(u_vars[i] - u_vars[j] + n_cities * x_vars[i, j] <= n_cities - 1)\n",
     "\n",
     "#This is the worst way of expressing this known to mankind - but whatever.\n",
-    "opt_model.setObjective(grb.quicksum(C[a,b]*x_vars[a,b] for a in range (0, n_cities)\n",
+    "opt_model.setObjective(grb.quicksum(C[a,b]*x_vars[(a + 1),(b + 1)] for a in range (0, n_cities)\n",
     "                                    for b in range(0, n_cities)), grb.GRB.MINIMIZE)\n",
     "\n",
     "#Now optimize the model\n",
