Made the code work for regular TSP

--- a/project_playground.ipynb
+++ b/project_playground.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,83 +125,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 10.0 (19045.2))\n",
-      "\n",
-      "CPU model: 12th Gen Intel(R) Core(TM) i7-12700K, instruction set [SSE2|AVX|AVX2]\n",
-      "Thread count: 12 physical cores, 20 logical processors, using up to 20 threads\n",
-      "\n",
-      "Optimize a model with 104 rows, 110 columns and 462 nonzeros\n",
-      "Model fingerprint: 0x586044eb\n",
-      "Variable types: 0 continuous, 110 integer (100 binary)\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 1e+01]\n",
-      "  Objective range  [3e-02, 2e+00]\n",
-      "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 1e+01]\n",
-      "Presolve removed 9 rows and 9 columns\n",
-      "Presolve time: 0.00s\n",
-      "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
-      "Thread count was 1 (of 20 available processors)\n",
-      "\n",
-      "Solution count 0\n",
-      "\n",
-      "Model is infeasible\n",
-      "Best objective -, best bound -, gap -\n"
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m u_vars  \u001b[38;5;241m=\u001b[39m opt_model\u001b[38;5;241m.\u001b[39maddVars(set_I, vtype\u001b[38;5;241m=\u001b[39mgrb\u001b[38;5;241m.\u001b[39mGRB\u001b[38;5;241m.\u001b[39mINTEGER, lb\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# The constraints - naming conventions follow Bektas, 2006 - Problem code:\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(\u001b[43mgrb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquicksum\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_cities\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m n_salesmen)\n\u001b[0;32m     20\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum(\u001b[38;5;28mvars\u001b[39m[i, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities)) \u001b[38;5;241m==\u001b[39m n_salesmen)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# My initial formulation was wrong, go through j = 1, make sure it equals 1. Go through j = 2, make sure it equals 2...\u001b[39;00m\n",
+      "File \u001b[1;32msrc\\\\gurobipy\\\\gurobi.pxi:3842\u001b[0m, in \u001b[0;36mgurobipy.quicksum\u001b[1;34m()\u001b[0m\n",
+      "Cell \u001b[1;32mIn[66], line 18\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     15\u001b[0m u_vars  \u001b[38;5;241m=\u001b[39m opt_model\u001b[38;5;241m.\u001b[39maddVars(set_I, vtype\u001b[38;5;241m=\u001b[39mgrb\u001b[38;5;241m.\u001b[39mGRB\u001b[38;5;241m.\u001b[39mINTEGER, lb\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# The constraints - naming conventions follow Bektas, 2006 - Problem code:\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum(\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities)) \u001b[38;5;241m==\u001b[39m n_salesmen)\n\u001b[0;32m     20\u001b[0m opt_model\u001b[38;5;241m.\u001b[39maddConstr(grb\u001b[38;5;241m.\u001b[39mquicksum(\u001b[38;5;28mvars\u001b[39m[i, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_cities)) \u001b[38;5;241m==\u001b[39m n_salesmen)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# My initial formulation was wrong, go through j = 1, make sure it equals 1. Go through j = 2, make sure it equals 2...\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
      ]
     }
    ],
    "source": [
-    "n = range(1, n_cities + 1)\n",
-    "m = range(1, n_cities + 1)\n",
+    "# Set the relevant ranges\n",
+    "set_I = range(0, n_cities)\n",
+    "set_J = range(0, n_cities)\n",
     "\n",
-    "set_I = n\n",
-    "set_J = m\n",
+    "# Transform the problem into a tuplelist -> basically creates a graph of all possible connections\n",
+    "tuple_list_graph = grb.tuplelist([(i, j) for i in set_I for j in set_I if i != j])\n",
     "\n",
     "# Set up a Gurobi optimizer, name it accordingly.\n",
     "opt_model = grb.Model(name=\"mTSP Optimizer\")\n",
     "\n",
     "# X, denoting if a route is used or not, is a binary variable. Sets up our connection of matrices.\n",
-    "x_vars = {(i,j):opt_model.addVar(vtype=grb.GRB.BINARY,\n",
-    "            name=\"x_{0}_{1}\".format(i,j)) \n",
-    "            for i in set_I for j in set_J}\n",
+    "x_vars = opt_model.addVars(tuple_list_graph, vtype=grb.GRB.BINARY)\n",
     "\n",
     "# u variables, tracking order of different visited nodes.\n",
-    "u_vars  ={(i):opt_model.addVar(vtype=grb.GRB.INTEGER,\n",
-    "            name=\"x_{0}\".format(i)) \n",
-    "            for i in n}\n",
+    "u_vars  = opt_model.addVars(set_I, vtype=grb.GRB.INTEGER, lb=0)\n",
     "\n",
-    "## The constraints - naming conventions follow Bektas, 2006:\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[1,j] for j in range(1, n_cities + 1))) == n_salesmen, name='const_1_1')\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[j,1] for j in range(1, n_cities + 1))) == n_salesmen, name='const_2')\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[i,j]for i in set_I\n",
-    "                            for j in range(1, n_cities))) == 1, name='const_3')\n",
-    "opt_model.addConstr(grb.quicksum((x_vars[i,j]for j in set_J\n",
-    "                            for i in range(1, n_cities))) == 1, name='const_4')\n",
+    "# The constraints - naming conventions follow Bektas, 2006 - Problem code:\n",
+    "opt_model.addConstr(grb.quicksum(vars[0, i] for i in range(1, n_cities)) == n_salesmen)\n",
     "\n",
-    "## Subtour elimination constraints:\n",
-    "opt_model.addConstrs((u_vars[i] >= 2 for i in range (1, n_cities)), name='uconst_1')\n",
-    "opt_model.addConstrs((u_vars[i] <= n_cities for i in range (1, n_cities)), name='uconst_2')\n",
-    "opt_model.addConstr((u_vars[1] == 0), name='uconst_3')\n",
+    "opt_model.addConstr(grb.quicksum(vars[i, 0] for i in range(1, n_cities)) == n_salesmen)\n",
     "\n",
-    "## The main SEC constraint:\n",
-    "for i in range(1, n_cities + 1):\n",
-    "    for j in range(1, n_cities + 1):\n",
-    "        if i != j and 1 <= i and i <= n_cities - 1:\n",
-    "            opt_model.addConstr(u_vars[i] - u_vars[j] + n_cities * x_vars[i, j] <= n_cities - 1)\n",
+    "# My initial formulation was wrong, go through j = 1, make sure it equals 1. Go through j = 2, make sure it equals 2...\n",
+    "for j in set_J:\n",
+    "    opt_model.addConstr(grb.quicksum([x_vars[i, j] for i, j in tuple_list_graph.select(\"*\", j)]) == 1)\n",
     "\n",
-    "#This is the worst way of expressing this known to mankind - but whatever.\n",
-    "opt_model.setObjective(grb.quicksum(C[a,b]*x_vars[(a + 1),(b + 1)] for a in range (0, n_cities)\n",
-    "                                    for b in range(0, n_cities)), grb.GRB.MINIMIZE)\n",
+    "# My initial formulation was wrong, go through i = 1, make sure it equals 1. Go through i = 2, make sure it equals 2...\n",
+    "for i in set_I:\n",
+    "    opt_model.addConstr(grb.quicksum([x_vars[i, j] for i, j in tuple_list_graph.select(i, \"*\")]) == 1)\n",
     "\n",
-    "#Now optimize the model\n",
+    "# The main SEC constraint:\n",
+    "for i, j in tuple_list_graph:\n",
+    "    if (i != 0 and j != 0):\n",
+    "        opt_model.addConstr(u_vars[i] - u_vars[j] + n_cities * x_vars[i, j] <= n_cities - 1)\n",
+    "opt_model.addConstr(u_vars[0] == 1)\n",
+    "\n",
+    "# This is the worst way of expressing this known to mankind - but whatever.\n",
+    "opt_model.setObjective(grb.quicksum([C[i][j] * x_vars[i, j] for i, j in tuple_list_graph]), grb.GRB.MINIMIZE)\n",
+    "\n",
+    "# Now optimize the model\n",
     "opt_model.optimize()\n"
    ]
   }
