added some overview of ACO. Excited to work on Ant System tomorrow.

--- a/project_playground.ipynb
+++ b/project_playground.ipynb
@@ -379,10 +379,52 @@
     "\n",
     "**Generic Problem Representation:**\n",
     "\n",
+    "A model $P = (S, \\Omega, f)$ of combinatorial optimization consists of some:\n",
     "\n",
-    "**Ant System:**\n",
+    "1. $S$ search space, finite set of decision variables or a finite domain\n",
+    "2. $\\Omega$ set of constraints\n",
+    "3. Objective function $f: S\\rightarrow \\mathbb{R}_0^+$ to be minimized\n",
     "\n",
-    "Ant System was not particularly competitive for state-of-the-art TSP at the time. "
+    "The search space is some variables $X_i, i = 1,...,n$ each having a domain $D_i$ x's have some assignment v's. A feasible solution *s* is an assignment where the constraints are all satisfied.\n",
+    "\n",
+    "We can use this understanding of the model to apply it to ACO. $X_i$ can be instantiated with a particular value $v^j_i$ of its domain to create a solution component. This solution component can be denoted by $c^j_i$. Ants need to then also combine appropriate solution components to create high-quality solutions. Each solution component needs to have an associated pheromone variable $T_{ij}$. Set of all solutions is *C* and set of all pheromone variables is *T*. Each member of *T* has some $t_{ij}$\n",
+    "\n",
+    "**Algorithm Overview:**\n",
+    "\n",
+    "def ACO():\n",
+    "    Initialize variables();\n",
+    "    while (termination condition != True){\n",
+    "        ConstructAntSolutions(m); <- This is done by some m ants\n",
+    "        ApplyLocalSearch(); <- Optional step\n",
+    "        GlobalUpdatePheromones(t); <- Pheromones are time varying so as a result they depend on termination\n",
+    "    }\n",
+    "\n",
+    "**ConstructAntSolutions(m):**\n",
+    "A set of *m* ants constructs some solutions. Each ant starts empty and extends its solution by choosing another feasible component, adding it to the solution. This is done in accordance to the earlier-defined constraints.\n",
+    "\n",
+    "The choice of solution is done probabilistically at each construction step through some formula as defined in Ant System (AS)\n",
+    "\n",
+    "$$p(c^j_i|s_p) = \\frac{t^{a}_{ij}\\cdot[\\eta(c^j_i)^\\beta]}{\\Sigma_{c^l_i}t^a_{il}\\cdot[\\eta(c^l_i)^\\beta]}$$\n",
+    "\n",
+    "Note that all c's here are a part of the set of all feasible solution components. Here, $\\Eta$ assigns some heuristic value to a solution component, usually called heuristic information. Alpha and beta determine the relative influence of pheromone trails and heuristic info.\n",
+    "\n",
+    "**ApplyLocalSearch()**\n",
+    "\n",
+    "Once there is a complete candidate solution, they can be further improved by some local search algorithm. This works best apparently.\n",
+    "\n",
+    "**GlobalUpdatePhermones():**\n",
+    "\n",
+    "Solution components belonging to good solutions are more desirable. Pheromone deposit increases level of good solution components, the next is trail evaporation, which decreases the pheromone deposited by ants. Pheromone evaporation is needed from too rapid convergenece.\n",
+    "\n",
+    "$$t_{ij} = (1-\\rho)t_{ij}+\\Sigma_{s\\in S_{upd} | c^j_i \\in s} g(s)$$\n",
+    "\n",
+    "S_upd is the set of solutions used to determine pheromone deposit, rho is the ebaporation rate, and g is a function which determines the quality of a solution (i.e. an evaluation function).\n",
+    "\n",
+    "Usually, $S_{upd}$ is a subset of $S_{iter} \\cup \\{s_{gb}\\}$\n",
+    "\n",
+    "S_iter is solutions found on the current iteration, and sgb is the best solution across all iterations.\n",
+    "\n",
+    "#### **Ant System time**"
    ]
   }
  ],
