fixed the eta thing.

--- a/project_playground.ipynb
+++ b/project_playground.ipynb
@@ -406,7 +406,7 @@
     "\n",
     "$$p(c^j_i|s_p) = \\frac{t^{a}_{ij}\\cdot[\\eta(c^j_i)^\\beta]}{\\Sigma_{c^l_i}t^a_{il}\\cdot[\\eta(c^l_i)^\\beta]}$$\n",
     "\n",
-    "Note that all c's here are a part of the set of all feasible solution components. Here, $\\Eta$ assigns some heuristic value to a solution component, usually called heuristic information. Alpha and beta determine the relative influence of pheromone trails and heuristic info.\n",
+    "Note that all c's here are a part of the set of all feasible solution components. Here, $\\eta$ assigns some heuristic value to a solution component, usually called heuristic information. Alpha and beta determine the relative influence of pheromone trails and heuristic info.\n",
     "\n",
     "**ApplyLocalSearch()**\n",
     "\n",
